# EVA

EVA/: CMakeLists.txt  package.xml
EVA/config/: joint_names_EVA.yaml
EVA/launch/: display.launch  gazebo.launch
EVA/meshes/: elbow_left.STL  elbow_right.STL  forearm_left.STL  forearm_right.STL  head.STL  lower_bicep_left.STL  lower_bicep_right.STL  neck_link.STL  shoulder_link_left.STL  shoulder_link_right.STL  upper_bicep_left.STL  upper_bicep_right.STL  wrist_left.STL  wrist_right.STL
EVA/urdf/: EVA.csv  EVA.urdf
arms/T-Motors-CubeMars/: Hand_test_3.py  arms.xml  can_motorlib_test.py  drive.xml  dual_arm_test.py  hand-test.py  hand_test_2.py  hello.py  motor_as_servo.py  motor_as_stepper copy.py  motor_as_stepper.py  new_test.py  performance_profiler.py  performance_profiler_two_motors.py
arms/arms_moveit/src/: .setup_assistant  CMakeLists.txt  package.xml
arms/arms_moveit/src/config/: eva.srdf  (+7 more)
drive/Teensy/Encoder_Test/: Encoder_Test.ino
drive/Teensy/Inverse_kinematics/: Inverse_kinematics.ino
drive/Teensy/odom_imu/: odom_imu.ino
drive/Teensy/pos_imu/: pos_imu.ino
drive/nav/: frames_2025-05-27_15.04.02.gv
drive/nav/install/: local_setup.sh  setup.sh
drive/nav/src/eva/: package.xml  setup.cfg  setup.py
drive/nav/src/eva/launch/: display.launch.py
drive/nav/src/eva/meshes/: bodytoshoulder_left.STL  bodytoshoulder_right.STL  elbow_left.STL  elbow_right.STL  forearm_left.STL  head.STL  omniwheelone.STL  omniwheelthree.STL  shouldertobicep_right.STL
drive/nav/src/eva/rviz/: default.rviz
drive/nav/src/eva/urdf/: eva.csv  eva.urdf
(+38 files in other folders)
